--- a/index.html
+++ b/index.html
@@ -24,27 +24,33 @@
         </div>
     </div><!-- ***** Preloader End ***** -->
     <!-- ***** Header Area Start ***** -->
-    <header class="header-area header-sticky background-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <nav class="main-nav">
-                        <!-- ***** Logo Start ***** --><a class="logo" href="index.html">
-                            <font color="#ed563b"></font>
-                        </a><a class="logo" href="index.html">
-                            <font color="#ed563b">SUPLYTE</font>
-                        </a><!-- ***** Logo End ***** -->
-                        <!-- ***** Menu Start ***** -->
-                        <ul class="nav">
-                            <li class="scroll-to-section"><a href="#top">Home</a></li>
-                            <li class="scroll-to-section"><a href="#features">SERVICES</a></li>
-                            <li class="scroll-to-section"><a href="#our-classes">INDUSTRIES</a></li>
-                            <li class="scroll-to-section"><br></li>
-                        </ul><a class="menu-trigger"><span>Menu</span></a><!-- ***** Menu End ***** -->
-                    </nav>
-                </div>
+<header class="header-area header-sticky background-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <nav class="main-nav">
+                    <!-- ***** Logo Start ***** -->
+                    <a class="logo" href="/">
+                        <font color="#ed563b"></font>
+                    </a>
+                    <a class="logo" href="/">
+                        <font color="#ed563b">SUPLYTE</font>
+                    </a>
+                    <!-- ***** Logo End ***** -->
+                    <!-- ***** Menu Start ***** -->
+                    <ul class="nav">
+                        <li class="scroll-to-section"><a href="#top">Home</a></li>
+                        <li class="scroll-to-section"><a href="#features">SERVICES</a></li>
+                        <li class="scroll-to-section"><a href="#our-classes">INDUSTRIES</a></li>
+                        <li class="scroll-to-section"><br></li>
+                    </ul>
+                    <a class="menu-trigger"><span>Menu</span></a>
+                    <!-- ***** Menu End ***** -->
+                </nav>
             </div>
         </div>
+    </div>
+</header>
     </header><!-- ***** Header Area End ***** -->
     <!-- ***** Main Banner Area Start ***** -->
     <div class="main-banner" id="top"><video autoplay muted loop id="bg-video">
