--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </div><!-- ***** Main Banner Area End ***** -->
     <!-- ***** Features Item Start ***** -->
-    <section class="section" id="features">
+    <section class="section" id="Services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-3">
@@ -128,7 +128,7 @@
             </div>
         </div>
     </section>
-    <section class="section" id="our-classes">
+    <section class="section" id="Industries">
         <div class="container">
             <div class="row ui-tabs ui-widget ui-widget-content ui-corner-all" id="tabs">
                 <div class="col-lg-4">
