--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </div><!-- ***** Main Banner Area End ***** -->
     <!-- ***** Features Item Start ***** -->
-    <section class="section" id="Services">
+    <section class="section" id="features">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-3">
@@ -122,7 +122,7 @@
                     <div class="cta-content">
                         <h2>INDUSTRIES <em>WE </em>SERVE</h2>
                         <p><b><i>Suplyte proudly serves a diverse array of industries, providing tailored facility solutions to meet their specific needs. From hospitality and property management to corporate offices, retail, industrial, healthcare, and education sectors, our comprehensive services&#8212;ranging from janitorial and disinfection to scenting and industrial cleaning&#8212;ensure clean, safe, and welcoming environments. We partner with businesses and properties across to enhance operational efficiency, maintain compliance, and elevate the experience for employees, customers, and residents.</i></b></p>
-                        <div class="main-button scroll-to-section"><a href="#our-classes">INDUSTRIES WE SERVE</a></div>
+                        <div class="main-button scroll-to-section"><a href="Industries">INDUSTRIES WE SERVE</a></div>
                     </div>
                 </div>
             </div>
