--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                        <li class="scroll-to-section"><a href="#top">Home</a></li>
-                        <li class="scroll-to-section"><a href="#features">SERVICES</a></li>
-                        <li class="scroll-to-section"><a href="#our-classes">INDUSTRIES</a></li>
+                        <li class="scroll-to-section"><a href="#Top">Home</a></li>
+                        <li class="scroll-to-section"><a href="#Services">SERVICES</a></li>
+                        <li class="scroll-to-section"><a href="#Industries">INDUSTRIES</a></li>
                         <li class="scroll-to-section"><br></li>
                     </ul>
                     <a class="menu-trigger"><span>Menu</span></a>
@@ -60,12 +60,12 @@
             <div class="caption">
                 <h6>Elevating Spaces, Simplifying Solutions</h6>
                 <h2>Local Facility Services & Product <em>SUPPLIER</em></h2>
-                <div class="main-button scroll-to-section"><a href="#features">OUR SERVICES</a></div>
+                <div class="main-button scroll-to-section"><a href="#services">OUR SERVICES</a></div>
             </div>
         </div>
     </div><!-- ***** Main Banner Area End ***** -->
     <!-- ***** Features Item Start ***** -->
-    <section class="section" id="features">
+    <section class="section" id="Services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 offset-lg-3">
@@ -122,7 +122,7 @@
                     <div class="cta-content">
                         <h2>INDUSTRIES <em>WE </em>SERVE</h2>
                         <p><b><i>Suplyte proudly serves a diverse array of industries, providing tailored facility solutions to meet their specific needs. From hospitality and property management to corporate offices, retail, industrial, healthcare, and education sectors, our comprehensive services&#8212;ranging from janitorial and disinfection to scenting and industrial cleaning&#8212;ensure clean, safe, and welcoming environments. We partner with businesses and properties across to enhance operational efficiency, maintain compliance, and elevate the experience for employees, customers, and residents.</i></b></p>
-                        <div class="main-button scroll-to-section"><a href="Industries">INDUSTRIES WE SERVE</a></div>
+                        <div class="main-button scroll-to-section"><a href="#Industries">INDUSTRIES WE SERVE</a></div>
                     </div>
                 </div>
             </div>
