--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <!-- ***** Logo End ***** -->
                     <!-- ***** Menu Start ***** -->
                     <ul class="nav">
-                        <li class="scroll-to-section"><a href="#Top">Home</a></li>
+                        <li class="scroll-to-section"><a href="#top">Home</a></li>
                         <li class="scroll-to-section"><a href="#Services">SERVICES</a></li>
                         <li class="scroll-to-section"><a href="#Industries">INDUSTRIES</a></li>
                         <li class="scroll-to-section"><br></li>
